<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Neon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scanning">Croping in progress</string>
    <string name="more_images">%1$d more images required"</string>
    <string name="scan">Save Croping</string>
    <string name="select_tag">Select Tag</string>
    <string name="cantCrop">Can\'t crop the image, change the points</string>
    <string name="ok">OK</string>
    <string name="remove_img_title">Remove Image</string>
    <string name="cancelDialog">Cancel</string>
    <string name="okDialog">OK</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="facebook_app_id">424300634391093</string>
    <string name="maps_key">AIzaSyBCnuONgR6ASm4J5nWo2eIL5rf84G14a4U</string>
    <string name="crashlytics_key">212cee0812295a2c1f7ffe324c95efe625a227ea</string>
    <string name="map_activity_item">Maps Activity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="emptyString" />
    <string name="title_activity_media_store_test">MediaStoreTest</string>
    <string name="alert" translatable="false">Alert</string>
    <string name="removeImage">Are you sure you want to remove this image ?</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="title_activity_camera_priority">CameraPriorityActivity</string>
    <string name="title_activity_neutral">NeutralActivity</string>
    <string name="permission_error">Permission not granted</string>
    <string name="you_need_to_allow_access_to">You need to allow access to %1$s.\nSettings->Apps->Gcloud->Permissions->%2$s</string>
    <string name="go_to_app_info">Go to App Info</string>
    <string name="manifest_permission_error">Mention %1$s in your Manifest file</string>
    <string name="photos">Photos</string>
    <string name="photos_count">Photos (%1$d)</string>
    <string name="zero">0</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="pass_params">Please pass photo params</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_error">Either No access or no gallery files present</string>
    <string name="wrong_format">Wrong file format selected</string>
    <string name="no_image_selected">No image selected</string>
    <string name="max_count_error">%1$d images are allowed only</string>
    <string name="max_tag_count_error">%1$d images are allowed only for </string>
    <string name="gallery_image_editing_error">Please edit this photo directly from phone gallery. In-app gallery image editing will be available soon.</string>
    <string name="coming_soon">Coming Soon</string>

    <string name="selected_max_photos">Maximum no of photos selected already</string>
    <string name="click_photo">Please click atleast one photo</string>
    <string name="pass_valid_params">Please pass valid params</string>
    <string name="invalid_mode">Please pass valid mode in params</string>
    <string name="no_images">No Images Clicked</string>
    <string name="next">Next</string>
    <string name="done">DONE</string>
    <string name="image_review">Image Review</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="please_select_atleast_one">Please click atleast one photo</string>
    <string name="camera_error">Camera Error. Kindly try again !!</string>
    <string name="prev">Previous</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="capture">capture</string>
    <string name="tag_mandatory_error"> %1$s \n is mandatory </string>
    <string name="press_done">Press Done</string>
    <string name="no_tags_sent">Please set tags for images</string>
    <color name="gray">#808080</color>
    <string name="title_activity_image_review">ImageReviewActivity</string>
    <string name="please_confirm">Please confirm</string>
    <string name="would_you_like_to_save_captured_images">Would you like to save the captured images</string>
    <string name="would_you_like_to_save_captured_pdf">Would you like to save the captured PDF file</string>
    <string name="neon_file_provider_authority">${applicationId}.fileprovider</string>
    <string name="mandatory_images">Mandatory Images</string>
    <string name="submit">Submit</string>
    <string name="camera">Camera</string>
    <string name="image_preview">Image Preview</string>
</resources>
