<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical">

            <ImageView
                android:contentDescription="@null"
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:scaleType="center"/>

            <TextView
                android:id="@+id/photosText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/ivBack"
                android:layout_toEndOf="@id/ivBack"
                android:text="@string/photos"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/photosCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/photosText"
                android:layout_marginLeft="5dip"
                android:layout_marginStart="5dip"
                android:layout_toRightOf="@+id/photosText"
                android:layout_toEndOf="@+id/photosText"
                android:background="@drawable/text_view_blue_border"
                android:paddingBottom="2dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="2dp"
                android:text="@string/zero"
                android:textColor="@color/textColor" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/llActions"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_below="@+id/headerLayout"
            android:layout_margin="@dimen/neon_default_margin"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addPhotoCamera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/text_view_middle_selector_gray_black"
                android:drawablePadding="6dp"
                android:drawableTop="@drawable/take_photo"
                android:gravity="center"
                android:padding="5dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/take_photo"
                android:textColor="@color/textColor" />


            <TextView
                android:id="@+id/addPhotoGallary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/text_view_middle_selector_gray_black"
                android:drawablePadding="6dp"
                android:drawableTop="@drawable/gallery"
                android:gravity="center"
                android:padding="5dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/choose_gallery"
                android:textColor="@color/textColor" />


        </LinearLayout>


        <ImageView
            android:id="@+id/lineShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llActions"
            android:background="@drawable/header_gradient"
            android:contentDescription="@string/emptyString"
            android:paddingBottom="5dp" />


        <GridView
            android:id="@+id/gvImages"
            android:verticalSpacing="@dimen/vertical_space_images"
            android:horizontalSpacing="@dimen/horizontal_space_images"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/neon_default_margin"
            android:layout_marginRight="@dimen/neon_default_margin"
            android:layout_height="wrap_content"
            android:layout_below="@id/lineShadow"
            android:layout_above="@+id/done"
            android:numColumns="2" />



        <RelativeLayout
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/text_view_nocorners_gray_black"
            android:padding="5dp">

            <TextView
                style="@style/gc_dark_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/textColorPrimary"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/ok" />

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>
