<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/llActions"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_below="@+id/headerLayout"
            android:layout_margin="@dimen/vertical_space_images"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/addPhotoCamera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/camera_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/camera"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addPhotoGallary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/add_gallery_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/gallery"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/lineShadow"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/llActions"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/tranparent_black"
            android:contentDescription="@string/emptyString"
            android:paddingBottom="5dp" />

        <FrameLayout
            android:id="@+id/imageShowFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lineShadow"
            android:orientation="vertical" />

        <ListView
            android:id="@+id/tabList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtTagTitle"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="60dp"
            android:divider="@null"
            android:dividerHeight="0dp" />

        <TextView
            android:id="@+id/txtTagTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineShadow"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Mandatory Images:"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/show_min_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineShadow"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

</FrameLayout>